src/test/ui/consts/const-prop-read-static-in-const.stderr
warning: skipping const checks
  --> $DIR/const-prop-read-static-in-const.rs:5:18
   |
LL | const TEST: u8 = MY_STATIC;
   |                  ^^^^^^^^^

error: any use of this value will cause an error
  --> $DIR/const-prop-read-static-in-const.rs:5:18
   |
LL | const TEST: u8 = MY_STATIC;
   | -----------------^^^^^^^^^-
   |                  |
   |                  tried to read from a static during const evaluation
   |
   = note: `#[deny(const_err)]` on by default

error: aborting due to previous error

